Fix label errors